egress-fqdn.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-fqdn
spec:
  description: "For all pods in a namespace, allow egress to all pods in cluster and to outside endpoints matching *.cilium.io or cidr 192.168.1.0/16"
  endpointSelector: {}
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchPattern: "*.cilium.io"
    - toCIDRSet:
        - cidr: 192.168.1.0/16
